<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.wirelesskings.wkreload.activities.MainActivity">

    <item
        android:id="@+id/action_update"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_update"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter_list_black_24dp"
        android:iconTint="@android:color/white"
        android:orderInCategory="100"
        android:title="@string/action_filter"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:visible="false"
        app:showAsAction="never" />
</menu>
