<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/title_reload_state" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/bg_text_status"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/title_state_reload_denied"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/bg_text_status"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:lines="1"
                android:padding="4dp"
                android:text="@string/title_state_reload_in_progress"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/bg_text_status"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/title_state_reload_done"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/bg_text_status"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/title_state_reload_all"
                android:textAllCaps="true" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp">

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/txt_filter" />
    </RelativeLayout>
</LinearLayout>